--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@liveblocks/react": "^2.1.0",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
